Added styling to the recipe pages

--- a/recipes/ebiripo.html
+++ b/recipes/ebiripo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>ebiripo</title>
 </head>
 <body>
@@ -11,8 +12,8 @@
 
     <img src="../images/ebiripo.jpg">
 
-    <h2>Description</h2>
-    <p>Ebiripo is a staple of the magnificent and sociable Ijebu people of Western Nigeria. It is a dish made out of grated cocoyam, which is wrapped in local banana leaves, popularly called Moi Moi leaves and steamed.
+    <h2 class="description">Description</h2>
+    <p class="para">Ebiripo is a staple of the magnificent and sociable Ijebu people of Western Nigeria. It is a dish made out of grated cocoyam, which is wrapped in local banana leaves, popularly called Moi Moi leaves and steamed.
         The beauty of Ebiripo is in its simplicity.</p>
 
     <h4>Ingredients</h4>
