--- a/recipes/ikokore.html
+++ b/recipes/ikokore.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>ikokore</title>
 </head>
-<body>
-    <h1>Ikokore</h1>
+<body id="body">
+    <h1 id="ikokore">Ikokore</h1>
     
     <img src="../images/ikokore.jpg">
 
-    <h2>Description</h2>
-    <p>Ikokore is a delicacy peculiar to the people of Ijebu in the Western part ofNigeria. 
+    <h2 class="description">Description</h2>
+    <p class="para">Ikokore is a delicacy peculiar to the people of Ijebu in the Western part of Nigeria. 
         The yam pottage is made out of grated water yam (also called Isu Ewura in Yoruba).</p>
 
     <h4>Ingredients</h4>
