--- a/recipes/zobo.html
+++ b/recipes/zobo.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>zobo</title>
 </head>
 <body>
-    <h1>Zobo</h1>
+    <h1 id="zobo">Zobo</h1>
 
     <img src="../images/zobo-drink.jpg">
 
-    <h2>Description</h2>
+    <h2 class="description">Description</h2>
 
-    <p>Zobo (Hibiscus) as it popularly called in Nigeria is a refreshing and tasty drink made out of Zobo leaves. It is also easy to make</p>
+    <p class="para">Zobo (Hibiscus) as it popularly called in Nigeria is a refreshing and tasty drink made out of Zobo leaves. It is also easy to make</p>
 
     <h4>Ingredients</h4>
     <ul>
